<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>

<package format="3">

  <name>phone_imu_ws_server</name>
  <version>0.0.1</version>
  <description>WebSocket server that receives IMU data from a mobile phone and publishes it as ROS2 sensor_msgs/Imu topics.</description>

  <maintainer email="gcreddyprofessional@gmail.com">harsha</maintainer>
  <license>Apache-2.0</license>

  <!-- ROS2 dependencies -->
  <depend>rclpy</depend>
  <depend>sensor_msgs</depend>
  <depend>ament_index_python</depend>
  <depend>tf2_ros</depend>
  <depend>geometry_msgs</depend>

  <!-- Python runtime dependency -->
  <exec_depend>python3-websockets</exec_depend>

  <!-- Testing dependencies -->
  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>

</package>
